@@ -14,10 +14,10 @@ build_Anno <- function(path2gene, path2name) {
     assign("PATHID2EXTID", PATHID2EXTID, envir = Anno_clusterProfiler_Env)
     assign("EXTID2PATHID", EXTID2PATHID, envir = Anno_clusterProfiler_Env)
 
-    if (! missing(path2name) || is.null(path2name) || is.na(path2name)) {
-        assign("PATHID2NAME", path2name, envir = Anno_clusterProfiler_Env)
-    } else {
+    if ( missing(path2name) || is.null(path2name) || is.na(path2name)) {
         assign("PATHID2NAME", NULL, envir = Anno_clusterProfiler_Env)
+    } else {
+        assign("PATHID2NAME", path2name, envir = Anno_clusterProfiler_Env)
     }
     return(Anno_clusterProfiler_Env)
 }
